# rrf-rp2040-mfm-firmware

./: .gitignore  CMakeLists.txt  README.md
FreeRTOS-SMP/: FreeRTOSConfig.h
src/: as5600.c  as5600.h  debug.c  debug.h  main.c  ws2812.c  ws2812.h
